# CHAT_BOT

./: .gitignore  DATABASE_SETUP_README.md  FRONTEND_FIX_GUIDE.md  INTERNET_SEARCH_README.md  POSTGRESQL_SETUP.md  PROJECT_OVERVIEW_AND_MCP_TOOLS.md  README_SETUP.md  pyproject.toml  setup_complete.py  setup_database.py  setup_database_simple.py  setup_help.py  start_system.py  stream_code.py  test_database_setup.py  test_internet_search.py
backend/: auth_utils.py  complete_migration.py  create_demo_users.py  database.py  main.py  migrate_add_internet_search.py  migrate_add_model_config.py  migrate_add_session_admin.py  models.py  quick_fix_internet_search.py  rag_service.py  requirements.txt  schemas.py  search_service.py  setup_postgres.py  test_connection.py
backend/routers/: admin.py  auth.py  chat.py  documents.py  session_admin.py
front_end/: package-lock.json  package.json
front_end/public/: index.html
front_end/src/: App.tsx
front_end/src/components/: AdminBlock.tsx  Layout.tsx  ModelConfigModal.tsx  RowActionBar.tsx  RowActionMenu.tsx  StatCard.tsx  ThemeToggle.tsx
front_end/src/contexts/: AuthContext.tsx  ThemeContext.tsx
front_end/src/pages/: AdminDashboard.tsx  Login.tsx  Register.tsx  SessionAdminDashboard.tsx  UserChat.tsx
front_end/src/services/: api.ts
front_end/src/types/: index.ts  react-syntax-highlighter.d.ts
